// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Adding web dev plugin to configuration 1`] = `
Object {
  "devServer": Object {
    "compress": true,
    "historyApiFallback": true,
    "host": "0.0.0.0",
    "port": 3000,
    "proxy": Object {
      "*": "TEST_PATH//./test-project//./dist",
    },
    "quiet": false,
  },
  "entry": "./src/index.ts",
  "mode": "development",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "TEST_PATH//./test-project//dist",
    "publicPath": "./",
  },
}
`;

exports[`Adding web dev plugin with options to configuration 1`] = `
Object {
  "devServer": Object {
    "compress": false,
  },
  "entry": "./src/index.ts",
  "mode": "development",
  "node": Object {
    "fs": "empty",
    "net": "empty",
    "tls": "empty",
  },
  "output": Object {
    "chunkFilename": "[name].bundle.js",
    "filename": "[name].bundle.js",
    "path": "TEST_PATH//./test-project//dist",
    "publicPath": "./",
  },
}
`;
